--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mockman-js": "^1.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-player": "^2.10.1",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "5.0.1",
     "uuid": "^8.3.2"
