--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-player": "^2.10.1",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.6",
     "uuid": "^8.3.2"
   },
   "scripts": {
